--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/user-details/user-details.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/user-details/user-details.component.html
@@ -29,14 +29,13 @@
         <p>{{UserInfo.address}}</p>
       </div>
 
-      <div>
+      <!--<div>
         <label class="detail-label">Is Admin:</label>
-        <p>{{UserInfo.isAdmin}}
+        <p>{{UserInfo.isAdmin}}-->
             <!--<span style="visibility:hidden">........</span>
             <button class="btn btn-outline-info" (click)="assign(userId)" *ngIf="UserInfo.isAdmin == false">Assign as admin</button>-->
-        </p>
-
-      </div>
+        <!--</p>
+      </div>-->
 
 
 
