--- a/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/batool/nav-bar/nav-bar.component.html
@@ -48,9 +48,15 @@
           <i class="ph ph-magnifying-glass"></i>
         </button>
 
-        <a routerLink="/userprofile" class="btn-primary text-nowrap" *ngIf="userId != ''">Profile</a>
-        <a (click)="logout()" id="NavBarProfile" *ngIf="userId != ''">Logout</a>
-        <a routerLink="/login" class="btn-primary text-nowrap" *ngIf="userId == ''">Login</a>
+        <a routerLink="/userprofile" class="btn-primary text-nowrap" *ngIf="userId || userIdLS">Profile</a>
+        <a (click)="logout()" id="NavBarProfile" *ngIf="userId || userIdLS">Logout</a>
+        <a routerLink="/login" class="btn-primary text-nowrap" *ngIf="!userId && !userIdLS">Login</a>
+
+
+        <!--<a routerLink="/userprofile" class="btn-primary text-nowrap" *ngIf="userIdLS !== null && userIdLS !== undefined">Profile</a>
+        <a (click)="logout()" id="NavBarProfile" *ngIf="userIdLS !== null && userIdLS !== undefined">Logout</a>
+        <a routerLink="/login" class="btn-primary text-nowrap" *ngIf="userIdLS === null || userIdLS === undefined">Login</a>-->
+
         <button class="menu-toggle-btn text-2xl">
           <i class="ph ph-list"></i>
         </button>
